# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: ast_builder.py  cli.py  formatter.py  gendiff.py  input_parser.py  parser.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: main.py
tests/fixtures/: expected_dicts.py
tests/gendiff/: test_ast_builder.py  test_gendiff.py  test_parser.py
tests/gendiff/formatters/: test_plain.py  test_stylish.py
