[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "gendiff"
authors = ["Adrianus West <adrianus_west@protonmail.com>"]
repository = "https://github.com/AdrianusWest/python-project-lvl2"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Natural Language :: English",
  "Environment :: Console"
]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.main:main"
